--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,25 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-orbs:
-  go: circleci/go@1.7.1
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  example-job:
+executors:
+  my-custom-executor:
     docker:
-      # replace with your preferred image
-      - image:  circleci/golang:1.17-buster-node-browsers-legacy
+      - image: cimg/go:1.18.3
+        auth:
+          # ensure you have first added these secrets
+          # visit app.circleci.com/settings/project/github/sixwaaaay/bytelite/environment-variables
+          username: $DOCKER_HUB_USER
+          password: $DOCKER_HUB_PASSWORD
+jobs:
+  my-job-test:
+
+    executor: my-custom-executor
     steps:
-      - go/test:
-          verbose: true 
+      - checkout
+      - run: |
+          go test  -count=1 -coverprofile=cover-source   -p 1 -covermode=set -v ./... -coverpkg=./...
 
 workflows:
-  example-workflow:
+  my-custom-workflow:
     jobs:
-      - example-job
+      - my-job-test
