--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - checkout
       - run: |
+          go mod tidy
           go test  -count=1 -coverprofile=cover-source   -p 1 -covermode=set -v ./... -coverpkg=./...
 
 workflows:
