feat: update pb and fix - add new proto - fix typo

--- a/.github/workflows/account-ci.yaml
+++ b/.github/workflows/account-ci.yaml
@@ -5,6 +5,8 @@ on:
     paths:
       - 'cmd/account/**'
       - '.github/workflows/account-ci.yaml'
+    branches:
+      - main
   pull_request:
     paths:
       - 'cmd/account/**'
