--- a/.github/workflows/followapi-ci.yaml
+++ b/.github/workflows/followapi-ci.yaml
@@ -28,3 +28,18 @@ jobs:
           cd cmd/followapi
           go mod tidy
           go build -ldflags="-s -w" -o followapi
+
+      - name: Login to DockerHub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./cmd/followapi
+          file: ./cmd/followapi/Dockerfile
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME || 'followapi' }}/followapi:latest
