--- a/.github/workflows/commentapi-ci.yaml
+++ b/.github/workflows/commentapi-ci.yaml
@@ -28,3 +28,17 @@ jobs:
           cd cmd/commentapi
           go mod tidy
           go build -ldflags="-s -w" -o commentapi
+      - name: Login to DockerHub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./cmd/commentapi
+          file: ./cmd/commentapi/Dockerfile
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME || 'commentapi' }}/commentapi:latest
