--- a/cmd/followapi/Dockerfile
+++ b/cmd/followapi/Dockerfile
@@ -16,6 +16,6 @@ ENV TZ Asia/Shanghai
 WORKDIR /app
 COPY --from=builder /app/followapi /app/followapi
 # configs
-COPY config.yaml /app/config.yaml
+COPY configs /app/configs
 EXPOSE 8080
 CMD ["./followapi"]
