--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,7 +9,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Login to DockerHub
-        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -20,28 +19,33 @@ jobs:
         with:
           context: ./cmd/account
           file: ./cmd/account/Dockerfile
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME || 'account' }}/account:${{ github.ref_name }}
       - name: Build videoapi service and push
         uses: docker/build-push-action@v4
         with:
           context: ./cmd/videoapi
           file: ./cmd/videoapi/Dockerfile
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME || 'videoapi' }}/videoapi:${{ github.ref_name }}
       - name: Build userapi service and push
         uses: docker/build-push-action@v4
         with:
           context: ./cmd/userapi
           file: ./cmd/userapi/Dockerfile
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME || 'userapi' }}/userapi:${{ github.ref_name }}
       - name: Build followapi service and push
         uses: docker/build-push-action@v4
         with:
           context: ./cmd/followapi
           file: ./cmd/followapi/Dockerfile
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME || 'followapi' }}/followapi:${{ github.ref_name }}
       - name: Build commentapi service and push
         uses: docker/build-push-action@v4
         with:
           context: ./cmd/commentapi
           file: ./cmd/commentapi/Dockerfile
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME || 'commentapi' }}/commentapi:${{ github.ref_name }}
