--- a/comments.yaml
+++ b/comments.yaml
@@ -47,6 +47,12 @@ paths:
       summary: "GET comments/reply"
       operationId: "getReplyCommentList"
       parameters:
+        - name: "belong_to"
+          in: "query"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
         - name: "reply_to"
           in: "query"
           required: true
