--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: 'sixwaaaay/sharing-comment:latest'
     pull_policy: 'always'
     ports:
-      - '8080:8080'
+      - '18080:8080'
     environment:
       - 'DB_HOST=mysql'
       - 'DB_PORT=3306'
@@ -44,11 +44,11 @@ services:
       - '16686:16686'
       - '4318:4318'
   shauser:
-    image: 'sixwaaaay/shauser:8519dfafa6018bc16868b1b2d0539c062e225500-test'
+    image: 'sixwaaaay/shauser:latest-test'
     ports:
       - '5000:5000'
   graph:
-    image: 'sixwaaaay/graph:0.4.0'
+    image: 'sixwaaaay/graph:v0.5.0'
     ports:
       - '8081:8081'
     environment:
