--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -13,46 +13,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # build account, videoapi, userapi, followapi, commentapi container image
-      - name: Build account service and push
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./cmd/account
-          file: ./cmd/account/Dockerfile
+          context: ./cmd/shauser
+          file: ./cmd/shauser/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'account' }}/account:${{ github.ref_name }}
-      - name: Build videoapi service and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./cmd/videoapi
-          file: ./cmd/videoapi/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'videoapi' }}/videoapi:${{ github.ref_name }}
-      - name: Build userapi service and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./cmd/userapi
-          file: ./cmd/userapi/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'userapi' }}/userapi:${{ github.ref_name }}
-      - name: Build followapi service and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./cmd/followapi
-          file: ./cmd/followapi/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'followapi' }}/followapi:${{ github.ref_name }}
-      - name: Build commentapi service and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./cmd/commentapi
-          file: ./cmd/commentapi/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'commentapi' }}/commentapi:${{ github.ref_name }}
-      - name: Build messageapi service and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./cmd/messageapi
-          file: ./cmd/messageapi/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'messageapi' }}/messageapi:${{ github.ref_name }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME || 'app' }}/shauser:${{ github.ref_name }}
