feat: add repository

--- a/sharp/content/content.csproj
+++ b/sharp/content/content.csproj
@@ -6,6 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <PublishAot>true</PublishAot>
+    <InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Dapper.AOT</InterceptorsPreviewNamespaces>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.24" />
+    <PackageReference Include="Dapper.AOT" Version="1.0.31" />
+    <PackageReference Include="MySqlConnector" Version="2.3.3" />
+    <PackageReference Include="MySqlConnector.DependencyInjection" Version="2.3.1" />
+  </ItemGroup>
 
 </Project>
