--- a/sharp/content/appsettings.json
+++ b/sharp/content/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default" : "Server=db; User ID=name; Password=passwd; Database=db;",
+    "User": "http://user:8080",
+    "Vote": "http://graph:8088"
+  },
+  "Secret": "secret"
 }
