--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'cmd/shauser/**'
   pull_request:
     paths:
       - 'cmd/shauser/**'
